--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-slick": "^0.29.0",
     "react-spinners": "^0.13.7",
     "slick-carousel": "^1.8.1",
+    "vercel": "^28.10.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
