--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
 JWT_SECRET = SECRET1234
+MONGODB_URI=mongodb+srv://paradiseproduct:paradiseproduct@cluster0.bqqyl.mongodb.net/paradise_prouct_data?retryWrites=true&w=majority
